--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "babel-jest": "27.5.1",
     "babel-plugin-styled-components": "1.10.7",
     "cypress": "^9.1.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "~8.12.0",
     "eslint-config-next": "12.1.5",
     "eslint-config-prettier": "8.1.0",
@@ -55,5 +56,10 @@
     "ts-jest": "27.1.4",
     "ts-node": "9.1.1",
     "typescript": "~4.6.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
