--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nrwl/react": "14.1.5",
     "@nrwl/web": "14.1.5",
     "@nrwl/workspace": "14.1.5",
+    "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "13.1.1",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
