--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "14.1.5",
+    "axios": "^0.27.2",
     "core-js": "^3.6.5",
     "next": "12.1.5",
     "react": "18.1.0",
@@ -30,6 +31,7 @@
     "@nrwl/workspace": "14.1.5",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "13.1.1",
+    "@testing-library/react-hooks": "^8.0.0",
     "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.8",
